--- a/ITI_TEST/dockerfile
+++ b/ITI_TEST/dockerfile
@@ -7,7 +7,6 @@ RUN apt-get update
 RUN apt-get -y install libgl1-mesa-glx
 RUN pip install --no-cache-dir -r requirements.txt
 
-ENV RESOURCE=pp3-resource-dev
-ENV RESOURCE_PORT=8080
+ENV RESOURCE_SERVER_URL='http://pp3-resource-dev:8080'
 ENV PORT=9888
 CMD uvicorn app:app --host 0.0.0.0 --port ${PORT}
