--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        fetch-dpeth: 0
+        fetch-depth: 0
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
